<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop="00dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp">

        <TextView
            android:id="@+id/create_account_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="50dp"
            android:text="@string/LOGIN_login_header" />

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/username_field"
            android:hint = "@string/CREATEACCOUNT_username_hint"
            android:focusable = "true"
            android:textColorHighlight = "#ffff"
            android:textColorHint = "#494747"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/create_account_header"
            android:textSize="20sp"
            android:maxLines="1"/>

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/full_name_field"
            android:hint = "@string/CREATEACCOUNT_full_name_hint"
            android:focusable = "true"
            android:textColorHighlight = "#ffff"
            android:textColorHint = "#494747"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/username_field"
            android:textSize="20sp"
            android:maxLines="1"/>

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/zip_code_field"
            android:hint = "@string/CREATEACCOUNT_zipcode_hint"
            android:focusable = "true"
            android:textColorHighlight = "#ffff"
            android:textColorHint = "#494747"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/full_name_field"
            android:textSize="20sp"
            android:maxLines="1"/>

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/password_field"
            android:hint = "@string/CREATEACCOUNT_password_hint"
            android:focusable = "true"
            android:textColorHighlight = "#ffff"
            android:textColorHint = "#494747"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/zip_code_field"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/reenter_password_field"
            android:hint = "@string/CREATEACCOUNT_reenter_password_hint"
            android:focusable = "true"
            android:textColorHighlight = "#ffff"
            android:textColorHint = "#494747"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/password_field"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/phone_field"
            android:hint = "Phone number"
            android:focusable = "true"
            android:textColorHighlight = "#ffff"
            android:textColorHint = "#494747"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/reenter_password_field"
            android:textSize="20sp"
            android:maxLines="1"/>
        <Button
            android:id="@+id/create_button"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:text="@string/CREATEACCOUNT_button_text"
            android:textSize="20sp"
            android:layout_below="@id/phone_field"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_below="@+id/phone_field"
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CREATEACCOUNT_missing_message"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:textColor="#F00"
            android:visibility="invisible"
            android:maxLines="1"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>